# RingRacersAP

./: .gitignore  CMakeLists.txt  README.md
.github/: release-notes.md
.github/workflows/: apworld.yml  ci.yml  cmake.yml  flatpak.yml  game.yml  release.yml
apworld/: .apignore  CMakeLists.txt  Items.py  Locations.py  Options.py  Regions.py  Rules.py  __init__.py  apdata.json  archipelago.json  items.py  jsondata.py  locations.py  options.py  regions.py  rules.py  version.py.in  web_world.py  world.py
apworld/data/: !manifest.json  challenge_drivers.json  challenges_altmusic.json  challenges_colors.json  challenges_cups.json  challenges_drivers.json  challenges_extras.json  challenges_followers.json  challenges_lostandfound.json  challenges_modes.json  challenges_tutorial.json  cups.json  filler.json  followers.json  maps_battle.json  maps_race.json  maps_special.json  maps_tutorial.json  spray_cans.json  starting_drivers.json
apworld/graphics/: UAPIC00A.lmp  UAPIC00B.lmp  UAPIC01A.lmp  UAPIC01B.lmp  UAPIC02A.lmp  UAPRR00A.lmp  UAPRR00B.lmp  UAPRR01A.lmp  UAPRR01B.lmp  UAPRR02A.lmp
apworld/utils/: soc_to_json.py
assets/: CMakeLists.txt
cmake/: Comptime.cmake
cmake/Modules/: APIgnore.cmake  GitUtilities.cmake
flatpak/: io.github.TehRealSalt.RingRacersAP.desktop  io.github.TehRealSalt.RingRacersAP.yaml
src/: CMakeLists.txt  ap_main.cpp  ap_main.h  comptime.c  config.h.in  console.c  console.h  cvars.cpp  d_main.cpp  d_netcmd.c  deh_lua.c  deh_soc.c  dehacked.c  discord.c  discord.h  doomdef.h  doomstat.h  f_finale.c  g_demo.cpp  g_game.c  g_gamedata.cpp  g_gamedata.h  g_input.c  g_input.h  hu_stuff.cpp  info.c  k_color.c  k_follower.c  k_follower.h  k_kart.c  k_menu.h  k_menudraw.c  k_menufunc.c  k_podium.cpp  m_cond.c  m_cond.h  m_pw.cpp  m_random.c  m_random.h  p_inter.c  (+11 more)
src/acs/: call-funcs.cpp
src/menus/: extras-challenges.c  extras-statistics.cpp  main-goner.cpp  options-1.c  options-profiles-1.c  options-profiles-edit-controls.c  play-char-select.c
src/menus/transient/: cup-select.c  explosions.c  level-select.c  virtual-keyboard.c
src/sdl/: CMakeLists.txt  i_system.cpp  i_video.cpp
